--- a/index.html
+++ b/index.html
@@ -43,10 +43,11 @@
         <ul class="sidebar-list">
           <li><span class="skills-item">HTML5</span></li>
           <li><span class="skills-item">CSS3</span></li>
-          <li><span class="skills-item">WebPack</span></li>
           <li><span class="skills-item">JavaScript</span></li>
+          <li><span class="skills-item">WebPack</span></li>
           <li><span class="skills-item">React.js</span></li>
           <li><span class="skills-item">Node.js</span></li>
+          <li><span class="skills-item">Bootstrap</span></li>
         </ul>
       </div>
 
@@ -55,6 +56,7 @@
         <h3 class="sidebar-title">Soft Skills</h3>
         <ul class="sidebar-list">
           <li><span class="skills-item">Visual Studio Code</span></li>
+          <li><span class="skills-item">Github</span></li>
           <li><span class="skills-item">Adobe Photoshop</span></li>
           <li><span class="skills-item">Adobe Illustrator</span></li>
           <li><span class="skills-item">Figma</span></li>
