--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
 
       <!-- About me section -->
       <div class="about-me">
-        <h2 class="profession">Front-End Developer | web-designer</h2>
-        <h1 class="first-last-name">Александр Бочем</h1>
+        <h2>Front-End Developer | web-designer</h2>
+        <h1>Александр Бочем</h1>
         <p>Веб-дизайнер с опытом работы более 5 лет! В настоящее время занимаюсь веб-разработкой. Front-End Developer. Большой опыт работы с растровой и векторной графикой любой сложности.</p> 
       </div>
 
       <!-- My projects section -->
       <div class="projects">
-        <h3 class="projects-title">Projects</h3>
+        <h3>Projects</h3>
         <ol>
           <li>
             <div class="projects-list">
@@ -109,13 +109,13 @@
 
       <!-- My work experience section -->
       <div class="work-experience">
-        <h3 class="work-experience-title">Work Experience</h3>
+        <h3>Work Experience</h3>
 
         <!-- My job -->
-        <div class="job">
-          <h4 class="job-title">Front-end developer, Web-designer <span class="company">Freelance</span></h4>
+        <div>
+          <h4>Front-end developer, Web-designer <span class="company">Freelance</span></h4>
           <p class="period">Апрель 2021 — Настоящее время <span class="period-line">|</span> Киев</p>
-          <ul class="job-list">
+          <ul>
             <li>Дизайн сайтов и приложений для мобильных устройств</li>
             <li>Адаптивная верстка сайтов и приложений</li>
             <li>Отрисовка векторных компонентов (логотипы, иконки, плашки, кнопки и тп)</li>
@@ -123,10 +123,10 @@
         </div>
 
         <!-- My last job -->
-        <div class="job">
-          <h4 class="job-title">Бренд менеджер (eСommerce) <span class="company">Цитрус (e-ton)</span></h4>
+        <div>
+          <h4>Бренд менеджер (eСommerce) <span class="company">Цитрус (e-ton)</span></h4>
           <p class="period">Июль 2018 — Апрель 2021 <span class="period-line">|</span> Киев</p>
-          <ul class="job-list">
+          <ul>
             <li>Постановка задач IT отдела</li>
             <li>Работы с групой дизайнеров</li>
             <li>Написание структуры сайтов</li>
@@ -138,10 +138,10 @@
         </div>
 
         <!-- My previous job -->
-        <div class="job">
-          <h4 class="job-title">Арт директор <span class="company">РА Медиа консалтинг</span></h4>
+        <div>
+          <h4>Арт директор <span class="company">РА Медиа консалтинг</span></h4>
           <p class="period">Март 2013 — Февраль 2018 <span class="period-line">|</span> Киев</p>
-          <ul class="job-list">
+          <ul>
             <li>Постановка задач IT отдела</li>
             <li>Работы с групой дизайнеров</li>
             <li>Работа с копирайтерами</li>
@@ -153,7 +153,7 @@
       </div>
 
       <!-- My education -->
-      <div class="education">
+      <div>
         <h3>Education</h3>
         <h4 class="education-university">ТНУ им. Вернадского</h4>
         <h4 class="education-facultet">Финансы</h4>
