--- a/index.html
+++ b/index.html
@@ -83,25 +83,33 @@
             <div class="projects-list">
               <a href="https://main-stage.com.ua/" class="projects-linck" target="_blank">Main Stage (Design | Front-End)</a>
               <p class="projects-dot"></p>
-              <a href="https://www.figma.com/file/7YfULQvsohW0EXDtNDMLIK/Main-Stage?node-id=0%3A1" target="_blank"><img src="./img/svg/Figma-icon.svg" title="Figma" class="icon"></a>
+              <a href="https://www.figma.com/file/7YfULQvsohW0EXDtNDMLIK/Main-Stage?node-id=0%3A1/" target="_blank"><img src="./img/svg/Figma-icon.svg" title="Figma" class="icon"></a>
               <a href="https://github.com/AlexandrBochev/Main_Stage/" target="_blank"><img src="./img/svg/github-icon.svg" title="Github" class="icon"></a>
               <span>[ <span class="projects-skills">Figma, HTML5, CSS3, JavaScript</span> ]</span>
             </div>
           </li>
           <li>
             <div class="projects-list">
-              <a href="/" class="projects-linck" target="_blank">Oksana Gonchar (Front-End)</a>
+              <a href="http://bulldog-francais.bochev.com.ua/" class="projects-linck" target="_blank">Bulldog Francais (Front-End)</a>
               <p class="projects-dot"></p>
-              <a href="https://github.com/AlexandrBochev/oksana-gonchar/" target="_blank"><img src="./img/svg/github-icon.svg" title="Github" class="icon"></a>
-              <span>[ <span class="projects-skills">React, Bootstrap</span> ]</span>
+              <a href="https://github.com/AlexandrBochev/Bulldog-Francais/" target="_blank"><img src="./img/svg/github-icon.svg" title="Github" class="icon"></a>
+              <span>[ <span class="projects-skills">HTML5, CSS3, JavaScript</span> ]</span>
             </div>
           </li>
           <li>
             <div class="projects-list">
-              <a href="/" class="projects-linck" target="_blank">Bulldog Francais (Front-End)</a>
+              <a href="/" class="projects-linck">Alexandr Bochev Resume (Front-End)</a>
               <p class="projects-dot"></p>
-              <a href="https://github.com/AlexandrBochev/Bulldog-Francais/" target="_blank"><img src="./img/svg/github-icon.svg" title="Github" class="icon"></a>
-              <span>[ <span class="projects-skills">HTML5, CSS3, JavaScript</span> ]</span>
+              <a href="https://github.com/AlexandrBochev/Alexandr_Bochev_Resume/" target="_blank"><img src="./img/svg/github-icon.svg" title="Github" class="icon"></a>
+              <span>[ <span class="projects-skills">HTML5, CSS3</span> ]</span>
+            </div>
+          </li>
+          <li>
+            <div class="projects-list">
+              <div class="projects-nolinck">Oksana Gonchar (Front-End) not published!</div>
+              <p class="projects-dot"></p>
+              <a href="https://github.com/AlexandrBochev/oksana-gonchar/" target="_blank"><img src="./img/svg/github-icon.svg" title="Github" class="icon"></a>
+              <span>[ <span class="projects-skills">React, Bootstrap</span> ]</span>
             </div>
           </li>
         </ol>
