--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           </li>
           <li>
             <div class="projects-list">
-              <a href="/" class="projects-linck">Alexandr Bochev Resume (Front-End)</a>
+              <a href="http://bochev.com.ua/" class="projects-linck" target="_blank">Alexandr Bochev Resume (Front-End)</a>
               <p class="projects-dot"></p>
               <a href="https://github.com/AlexandrBochev/Alexandr_Bochev_Resume/" target="_blank"><img src="./img/svg/github-icon.svg" title="Github" class="icon"></a>
               <span>[ <span class="projects-skills">HTML5, CSS3</span> ]</span>
