--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <!-- About me section -->
       <div class="about-me">
         <h2>Front-End Developer | web-designer</h2>
-        <h1>Александр Бочем</h1>
+        <h1>Александр Бочев</h1>
         <p>Веб-дизайнер с опытом работы более 5 лет! В настоящее время занимаюсь веб-разработкой. Front-End Developer. Большой опыт работы с растровой и векторной графикой любой сложности.</p> 
       </div>
 
@@ -90,26 +90,27 @@
           </li>
           <li>
             <div class="projects-list">
-              <a href="http://bulldog-francais.bochev.com.ua/" class="projects-linck" target="_blank">Bulldog Francais (Front-End)</a>
+              <a href="https://glivera-test-task.vercel.app/" class="projects-linck" target="_blank">
+                Glivera_test_task (Front-End)</a>
               <p class="projects-dot"></p>
-              <a href="https://github.com/AlexandrBochev/Bulldog-Francais/" target="_blank"><img src="./img/svg/github-icon.svg" title="Github" class="icon"></a>
+              <a href="https://github.com/AlexandrBochev/Glivera_test_task" target="_blank"><img src="./img/svg/github-icon.svg" title="Github" class="icon"></a>
               <span>[ <span class="projects-skills">HTML5, CSS3, JavaScript</span> ]</span>
             </div>
           </li>
           <li>
             <div class="projects-list">
-              <a href="http://bochev.com.ua/" class="projects-linck" target="_blank">Alexandr Bochev Resume (Front-End)</a>
+              <a href="https://oksana-gonchar.vercel.app/" class="projects-linck" target="_blank">Oksana Gonchar (Front-End)</a>
               <p class="projects-dot"></p>
-              <a href="https://github.com/AlexandrBochev/Alexandr_Bochev_Resume/" target="_blank"><img src="./img/svg/github-icon.svg" title="Github" class="icon"></a>
-              <span>[ <span class="projects-skills">HTML5, CSS3</span> ]</span>
+              <a href="https://github.com/AlexandrBochev/oksana-gonchar/" target="_blank"><img src="./img/svg/github-icon.svg" title="Github" class="icon"></a>
+              <span>[ <span class="projects-skills">React, Bootstrap</span> ]</span>
             </div>
           </li>
           <li>
             <div class="projects-list">
-              <div class="projects-nolinck">Oksana Gonchar (Front-End) not published!</div>
+              <a href="https://redlab-cleaning.vercel.app/" class="projects-linck" target="_blank">Уборка квартир в Киеве (Front-End)</a>
               <p class="projects-dot"></p>
-              <a href="https://github.com/AlexandrBochev/oksana-gonchar/" target="_blank"><img src="./img/svg/github-icon.svg" title="Github" class="icon"></a>
-              <span>[ <span class="projects-skills">React, Bootstrap</span> ]</span>
+              <a href="https://github.com/AlexandrBochev/redlab-cleaning" target="_blank"><img src="./img/svg/github-icon.svg" title="Github" class="icon"></a>
+              <span>[ <span class="projects-skills">HTML5, CSS3, JavaScript</span> ]</span>
             </div>
           </li>
         </ol>
