--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="Веб-дизайнер с опытом работы более 5 лет! В настоящее время занимаюсь веб-разработкой. Front-End Developer. Большой опыт работы с растровой и векторной графикой любой сложности.">
+  <meta name="description" content="Frontend Developer with 2 years experience (HTML5, CSS3, JavaScript, React.js.) Extensive experience in Web Design, over 5 years. Work with raster and vector graphics of any complexity.">
   <meta name="keywords" content="Alexandr Bochev, Front-End Developer, Web-designer, HTML, CSS, JavaScript, React, Figma">
   <meta name="author" content="Alexandr Bochev">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Alexandr Bochev | Front-End Developer | Web-Designer</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -26,6 +27,15 @@
 
       <!-- My contacts -->
       <div class="sidebar-block">
+        <div class="about-me-sidebar">
+          <h2>Frontend Developer | Web Designer</h2>
+          <h1>Alexandr Bochev</h1>
+          <p>
+            Frontend Developer with 2 years experience (HTML5, CSS3, JavaScript, React.js.)
+            <br>Extensive experience in Web Design, over 5 years.
+            <br>Work with raster and vector graphics of any complexity.
+          </p> 
+        </div>
         <h3 class="sidebar-title">Contacts</h3>
         <div class="contacts-item">
           <img src="./img/svg/phone.svg" alt="My phone" class="icon">
@@ -44,7 +54,6 @@
           <li><span class="skills-item">HTML5</span></li>
           <li><span class="skills-item">CSS3</span></li>
           <li><span class="skills-item">JavaScript</span></li>
-          <li><span class="skills-item">WebPack</span></li>
           <li><span class="skills-item">React.js</span></li>
           <li><span class="skills-item">Node.js</span></li>
           <li><span class="skills-item">Bootstrap</span></li>
@@ -70,9 +79,13 @@
 
       <!-- About me section -->
       <div class="about-me">
-        <h2>Front-End Developer | web-designer</h2>
-        <h1>Александр Бочев</h1>
-        <p>Веб-дизайнер с опытом работы более 5 лет! В настоящее время занимаюсь веб-разработкой. Front-End Developer. Большой опыт работы с растровой и векторной графикой любой сложности.</p> 
+        <h2>Frontend Developer | Web Designer</h2>
+        <h1>Alexandr Bochev</h1>
+        <p>
+          Frontend Developer with 2 years experience (HTML5, CSS3, JavaScript, React.js.)
+          <br>Extensive experience in Web Design, over 5 years.
+          <br>Work with raster and vector graphics of any complexity.
+        </p> 
       </div>
 
       <!-- My projects section -->
@@ -81,7 +94,7 @@
         <ol>
           <li>
             <div class="projects-list">
-              <a href="https://main-stage.com.ua/" class="projects-linck" target="_blank">Main Stage (Design | Front-End)</a>
+              <a href="https://main-stage.com.ua/" class="projects-linck" target="_blank">Main Stage (Design | Frontend)</a>
               <p class="projects-dot"></p>
               <a href="https://www.figma.com/file/7YfULQvsohW0EXDtNDMLIK/Main-Stage?node-id=0%3A1/" target="_blank"><img src="./img/svg/Figma-icon.svg" title="Figma" class="icon"></a>
               <a href="https://github.com/AlexandrBochev/Main_Stage/" target="_blank"><img src="./img/svg/github-icon.svg" title="Github" class="icon"></a>
@@ -107,7 +120,7 @@
           </li>
           <li>
             <div class="projects-list">
-              <a href="https://redlab-cleaning.vercel.app/" class="projects-linck" target="_blank">Уборка квартир в Киеве (Front-End)</a>
+              <a href="https://redlab-cleaning.vercel.app/" class="projects-linck" target="_blank">Cleaning of apartments in Kyiv (Front-End)</a>
               <p class="projects-dot"></p>
               <a href="https://github.com/AlexandrBochev/redlab-cleaning" target="_blank"><img src="./img/svg/github-icon.svg" title="Github" class="icon"></a>
               <span>[ <span class="projects-skills">HTML5, CSS3, JavaScript</span> ]</span>
@@ -123,39 +136,39 @@
         <!-- My job -->
         <div>
           <h4>Front-end developer, Web-designer <span class="company">Freelance</span></h4>
-          <p class="period">Апрель 2021 — Настоящее время <span class="period-line">|</span> Киев</p>
+          <p class="period">April 2021 — Now <span class="period-line">|</span> Kyiv</p>
           <ul>
-            <li>Дизайн сайтов и приложений для мобильных устройств</li>
-            <li>Адаптивная верстка сайтов и приложений</li>
-            <li>Отрисовка векторных компонентов (логотипы, иконки, плашки, кнопки и тп)</li>
+            <li>Responsive website layout</li>
+            <li>Website design</li>
+            <li>Rendering of vector components (logos, icons, dice, buttons, etc.)</li>
           </ul>
         </div>
 
         <!-- My last job -->
         <div>
-          <h4>Бренд менеджер (eСommerce) <span class="company">Цитрус (e-ton)</span></h4>
-          <p class="period">Июль 2018 — Апрель 2021 <span class="period-line">|</span> Киев</p>
+          <h4>Brand manager (eСommerce) <span class="company">Citrus (e-ton)</span></h4>
+          <p class="period">July 2018 — April 2021 <span class="period-line">|</span> Kyiv</p>
           <ul>
-            <li>Постановка задач IT отдела</li>
-            <li>Работы с групой дизайнеров</li>
-            <li>Написание структуры сайтов</li>
-            <li>Контроль работы рекламных агенств</li>
-            <li>Работа с арт-директорами</li>
-            <li>Полный менеджмент проектов от идеи до реализации в рамках дедлайна</li>
-            <li>Параллельно работал с проектами по верстке и дизайну для собственных заказчиков</li>
+            <li>Setting tasks for the IT department</li>
+            <li>Working with a group of designers</li>
+            <li>Writing the site structure</li>
+            <li>Control of advertising agencies</li>
+            <li>Working with art directors</li>
+            <li>Full project management from idea to implementation within the deadline</li>
+            <li>In parallel, he worked on layout and design projects for his own customers.</li>
           </ul>
         </div>
 
         <!-- My previous job -->
         <div>
-          <h4>Арт директор <span class="company">РА Медиа консалтинг</span></h4>
-          <p class="period">Март 2013 — Февраль 2018 <span class="period-line">|</span> Киев</p>
+          <h4>Art Director <span class="company">Advertising agency "Media Consulting"</span></h4>
+          <p class="period">March 2013 — February 2018 <span class="period-line">|</span> Kyiv</p>
           <ul>
-            <li>Постановка задач IT отдела</li>
-            <li>Работы с групой дизайнеров</li>
-            <li>Работа с копирайтерами</li>
-            <li>Написание концепций</li>
-            <li>Разработка дизайна и верстка приложений</li>
+            <li>Setting tasks for the IT department</li>
+            <li>Working with a group of designers</li>
+            <li>Working with copywriters</li>
+            <li>Writing concepts</li>
+            <li>Design development and layout of applications</li>
           </ul>
         </div>
 
@@ -164,9 +177,9 @@
       <!-- My education -->
       <div>
         <h3>Education</h3>
-        <h4 class="education-university">ТНУ им. Вернадского</h4>
-        <h4 class="education-facultet">Финансы</h4>
-        <p class="period">Сентябрь 2000 - Июнь 2005 <span class="period-line">|</span> Симферополь</p>
+        <h4 class="education-university">V.I. Vernadsky Taurida National University</h4>
+        <h4 class="education-facultet">Finance</h4>
+        <p class="period">September 2000 - June 2005 <span class="period-line">|</span> Simferopol</p>
       </div>
     </div>
 
