--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
           </li>
           <li>
             <div class="projects-list">
-              <a href="https://redlab-cleaning.vercel.app/" class="projects-linck" target="_blank">Cleaning of apartments in Kyiv (Front-End)</a>
+              <a href="https://brainlab-test-task.vercel.app/" class="projects-linck" target="_blank">Test task (Front-End)</a>
               <p class="projects-dot"></p>
-              <a href="https://github.com/AlexandrBochev/redlab-cleaning" target="_blank"><img src="./img/svg/github-icon.svg" title="Github" class="icon"></a>
+              <a href="https://github.com/AlexandrBochev/brainlab-test-task" target="_blank"><img src="./img/svg/github-icon.svg" title="Github" class="icon"></a>
               <span>[ <span class="projects-skills">HTML5, CSS3, JavaScript</span> ]</span>
             </div>
           </li>
