--- a/index.html
+++ b/index.html
@@ -103,6 +103,14 @@
           </li>
           <li>
             <div class="projects-list">
+              <a href="https://converter-currency-h1f1.vercel.app/" class="projects-linck" target="_blank">Converter Currency (Front-End)</a>
+              <p class="projects-dot"></p>
+              <a href="https://github.com/AlexandrBochev/converter-currency" target="_blank"><img src="./img/svg/github-icon.svg" title="Github" class="icon"></a>
+              <span>[ <span class="projects-skills">HTML5, CSS3, JavaScript</span> ]</span>
+            </div>
+          </li>
+          <li>
+            <div class="projects-list">
               <a href="https://brainlab-test-task.vercel.app/" class="projects-linck" target="_blank">Test task (Front-End)</a>
               <p class="projects-dot"></p>
               <a href="https://github.com/AlexandrBochev/brainlab-test-task" target="_blank"><img src="./img/svg/github-icon.svg" title="Github" class="icon"></a>
