--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="keywords" content="Alexandr Bochev, Front-End Developer, Web-designer, HTML, CSS, JavaScript, React, Figma">
   <meta name="author" content="Alexandr Bochev">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Alexandr Bochev | Front-End Developer | Web-Designer</title>
+  <title>Alexandr Bochev | Front-End Developer</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -28,7 +28,7 @@
       <!-- My contacts -->
       <div class="sidebar-block">
         <div class="about-me-sidebar">
-          <h2>Frontend Developer | Web Designer</h2>
+          <h2>Frontend Developer</h2>
           <h1>Alexandr Bochev</h1>
           <p>
             Frontend Developer with 2 years experience (HTML5, CSS3, JavaScript, React.js.)
@@ -55,7 +55,7 @@
           <li><span class="skills-item">CSS3</span></li>
           <li><span class="skills-item">JavaScript</span></li>
           <li><span class="skills-item">React.js</span></li>
-          <li><span class="skills-item">Node.js</span></li>
+          <li><span class="skills-item">Next.js</span></li>
           <li><span class="skills-item">Bootstrap</span></li>
         </ul>
       </div>
@@ -66,9 +66,9 @@
         <ul class="sidebar-list">
           <li><span class="skills-item">Visual Studio Code</span></li>
           <li><span class="skills-item">Github</span></li>
+          <li><span class="skills-item">Figma</span></li>
           <li><span class="skills-item">Adobe Photoshop</span></li>
           <li><span class="skills-item">Adobe Illustrator</span></li>
-          <li><span class="skills-item">Figma</span></li>
         </ul>
       </div>
 
@@ -79,7 +79,7 @@
 
       <!-- About me section -->
       <div class="about-me">
-        <h2>Frontend Developer | Web Designer</h2>
+        <h2>Frontend Developer</h2>
         <h1>Alexandr Bochev</h1>
         <p>
           Frontend Developer with 2 years experience (HTML5, CSS3, JavaScript, React.js.)
