--- a/index.html
+++ b/index.html
@@ -31,9 +31,8 @@
           <h2>Frontend Developer</h2>
           <h1>Alexandr Bochev</h1>
           <p>
-            Frontend Developer with 2 years experience (HTML5, CSS3, JavaScript, React.js.)
-            <br>Extensive experience in Web Design, over 5 years.
-            <br>Work with raster and vector graphics of any complexity.
+            Frontend developer with 2+ years of experience (HTML5, CSS3, JavaScript, React.js.)
+            <br>I am looking for a job in a good company where I can apply my knowledge and acquire new ones.
           </p> 
         </div>
         <h3 class="sidebar-title">Contacts</h3>
@@ -82,9 +81,8 @@
         <h2>Frontend Developer</h2>
         <h1>Alexandr Bochev</h1>
         <p>
-          Frontend Developer with 2 years experience (HTML5, CSS3, JavaScript, React.js.)
-          <br>Extensive experience in Web Design, over 5 years.
-          <br>Work with raster and vector graphics of any complexity.
+          Frontend developer with 2+ years of experience (HTML5, CSS3, JavaScript, React.js.)
+          <br>I am looking for a job in a good company where I can apply my knowledge and acquire new ones.
         </p> 
       </div>
 
@@ -92,6 +90,14 @@
       <div class="projects">
         <h3>Projects</h3>
         <ol>
+          <li>
+            <div class="projects-list">
+              <a href="https://dl-front-end-test-task-hf59.vercel.app/" class="projects-linck" target="_blank">DL Coca Cola (Frontend)</a>
+              <p class="projects-dot"></p>
+              <a href="https://github.com/AlexandrBochev/DL-front-end-test-task" target="_blank"><img src="./img/svg/github-icon.svg" title="Github" class="icon"></a>
+              <span>[ <span class="projects-skills">HTML5, CSS3, JavaScript</span> ]</span>
+            </div>
+          </li>
           <li>
             <div class="projects-list">
               <a href="https://main-stage.com.ua/" class="projects-linck" target="_blank">Main Stage (Design | Frontend)</a>
