--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <h2>Frontend Developer</h2>
           <h1>Alexandr Bochev</h1>
           <p>
-            Frontend developer with 2+ years of experience (HTML5, CSS3, JavaScript, React.js.)
+            Frontend developer with 2+ years of experience (HTML5, CSS3, JavaScript, React.js, Vue.js.)
             <br>I am looking for a job in a good company where I can apply my knowledge and acquire new ones.
           </p> 
         </div>
@@ -55,6 +55,9 @@
           <li><span class="skills-item">JavaScript</span></li>
           <li><span class="skills-item">React.js</span></li>
           <li><span class="skills-item">Next.js</span></li>
+          <li><span class="skills-item">Vue.js</span></li>
+          <li><span class="skills-item">Nuxt.js</span></li>
+          <li><span class="skills-item">Tailwindcss</span></li>
           <li><span class="skills-item">Bootstrap</span></li>
         </ul>
       </div>
@@ -81,7 +84,7 @@
         <h2>Frontend Developer</h2>
         <h1>Alexandr Bochev</h1>
         <p>
-          Frontend developer with 2+ years of experience (HTML5, CSS3, JavaScript, React.js.)
+          Frontend developer with 2+ years of experience (HTML5, CSS3, JavaScript, React.js, Vue.js..)
           <br>I am looking for a job in a good company where I can apply my knowledge and acquire new ones.
         </p> 
       </div>
@@ -117,16 +120,15 @@
           </li>
           <li>
             <div class="projects-list">
-              <a href="https://brainlab-test-task.vercel.app/" class="projects-linck" target="_blank">Test task (Front-End)</a>
+              <a href="https://nuxt-weather-app.vercel.app/" class="projects-linck" target="_blank">Weather App (Front-End)</a>
               <p class="projects-dot"></p>
-              <a href="https://github.com/AlexandrBochev/brainlab-test-task" target="_blank"><img src="./img/svg/github-icon.svg" title="Github" class="icon"></a>
-              <span>[ <span class="projects-skills">HTML5, CSS3, JavaScript</span> ]</span>
+              <a href="https://github.com/AlexandrBochev/nuxt-weather-app" target="_blank"><img src="./img/svg/github-icon.svg" title="Github" class="icon"></a>
+              <span>[ <span class="projects-skills">Vue.js, TypeScript, Tailwindcss</span> ]</span>
             </div>
           </li>
           <li>
             <div class="projects-list">
-              <a href="https://glivera-test-task.vercel.app/" class="projects-linck" target="_blank">
-                Glivera_test_task (Front-End)</a>
+              <a href="https://glivera-test-task.vercel.app/" class="projects-linck" target="_blank">Glivera (Front-End)</a>
               <p class="projects-dot"></p>
               <a href="https://github.com/AlexandrBochev/Glivera_test_task" target="_blank"><img src="./img/svg/github-icon.svg" title="Github" class="icon"></a>
               <span>[ <span class="projects-skills">HTML5, CSS3, JavaScript</span> ]</span>
